<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remote Drum</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="ip_invalid">Please input valid IP address</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="connect">Connect</string>
	<string name="ip_hint">IP Address</string>
	<string name="disconnect">Disconnect</string>
	<string name="general">GENERAL</string>
	<string name="sensitivity">Cursor Sensitivity</string>
	<string name="about">About</string>
	<string name="other">OTHER</string>
	<string name="esc">Esc</string>
	<string name="task_switch">Task Switch</string>
	<string name="pg_up">Page Up</string>
	<string name="pg_dn">Page Down</string>
	<string name="up">Up</string>
	<string name="down">Down</string>
	<string name="left">Left</string>
	<string name="right">Right</string>
	<string name="to_control">Control</string>
	<string name="to_keyboard">Keyboard</string>
</resources>
